--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-cache": "^0.4.6",
+    "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^3.3.1",
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^3.2.0",
